fixed pokemon nickname editing to be more aligned after it randomly became unaligned

--- a/src/components/PokemonPage/Nickname.css
+++ b/src/components/PokemonPage/Nickname.css
@@ -1,16 +1,22 @@
 .nickname-form {
     display: flex;
-    width: 80%;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    width: 80%;
+    height: 50%;
+    gap: 5px;
+    position: relative;
 }
 
 .nickname-input {
-    width: 85px;
+    margin-top: 19px;
+    width: 70px;
     font-size: .7em;
 }
 
 .nickname-display {
+    height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
